--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Rewrite in Node for my personal website, smoran.dev",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "postcss ./files/style.css -o ./dist/tailwind.css && node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "sdhmoran@gmail.com",
   "license": "ISC",
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongodb": "^3.6.3",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
     "tailwindcss": "^2.0.2"
   }
 }
