--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "license": "ISC",
   "dependencies": {
     "autoprefixer": "^10.1.0",
+    "aws-sdk": "^2.818.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-fileupload": "^1.2.0",
     "mongodb": "^3.6.3",
     "postcss": "^8.2.1",
     "postcss-cli": "^8.3.1",
